mdapi_output_dir/objects/HHD_Disk__c.object
<CustomObject>
    <label>HHD Disk</label>
    <nameField>
        <label>HHD Disk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HHD Disks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Buffer_capacity__c</fullName>
        <label>Buffer capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spindle_rotation_speed__c</fullName>
        <label>Spindle rotation speed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Capacity__c</fullName>
        <label>Storage Capacity</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inner</fullName>
                </value>
                <value>
                    <fullName>Outer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>